新增搜尋功能
新增搜尋功能，可以搜尋所有公開的播放清單，例如"最Hit華語榜"，並且My Playlist更改為顯示當前Playlist

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -5,7 +5,7 @@
     <title>My Playlist</title>
   </head>
   <body>
-    <h1>My Playlist</h1>
+    <h1>{{playlist_name}}</h1>
     <ul>
       {% for track in tracks %}
         <li>{{ track }}</li>
